--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <div class="call-to-action">
                 <h2>Free Download at Our Server!</h2>
                 <hr class="primary">
-                <p class="text-muted">It can only better!</p>
+                <p class="text-muted">It can only get better!</p>
                 <a href="#" class="btn btn-default btn-xl sr-button">Download Now!</a>
             </div>
         </div>
