--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
+                        <h3>Ready to Download</h3>
                         <p class="text-muted">It works out of the box with and it's easy as 1,2,3!</p>
                     </div>
                 </div>
